Fix a few alignment issues

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -284,6 +284,10 @@ footer {
 }
 
 @media (max-width: 768px) {
+  footer {
+    text-align: center;
+  }
+
   footer .share-button {
     margin: 10px auto;
     width: 90px;
